@@ -152,6 +152,11 @@ sub configure {
         commit_msg        => 'Version bump.',
       },
     ],
+    # ... after release; push changes up to Git
+    ( $self->fake_release
+      ? ()
+      : ( [ 'Git::Push', { push_to => [ 'origin', 'origin releases:releases' ] } ] )
+    ),
   );
 }
 
@@ -290,6 +295,11 @@ It is I<roughly> equivalent to the following:
   [Git::Commit / Commit Version Bump]
   allow_dirty_match = ^lib/
   commit_msg = Version bump.
+
+  ; ... after release; push changes up to Git (unless "fake_release" is set)
+  [Git::Push]
+  push_to = origin
+  push_to = origin releases:releases
 
 =head1 CUSTOMIZATION
 
